--- a/simple/src/app/lesson-editor/lesson-editor.component.html
+++ b/simple/src/app/lesson-editor/lesson-editor.component.html
@@ -1,7 +1,7 @@
 <div class="lesson-editor" fxLayout="column">
 	<div class="card-header" fxLayout="row" fxFill>
 		<div class="topicname" fxFlex>{{topic.name}}</div>
-		<button mat-button class="newlessonnote"  fxFlex="8" matToolTip="New Note" >
+		<button mat-icon-button *ngIf="!editingLesson" fxFlex="8" matToolTip="New Note" (click)="editButtonClicked();">
 			<mat-icon fontSet="fa" fontIcon="fa-edit"></mat-icon>
 		</button>
 	</div>
@@ -13,13 +13,30 @@
 		<div class="lesson-note-date" *ngIf="!editingLesson.date">
 			<span>Today</span>
 		</div>
-		<div [froalaEditor]="listOptions" [(froalaModel)]="editingLesson.content" ></div>
+		<div [froalaEditor]="listOptions" [(froalaModel)]="editingContent" ></div>
 	</div>
-	<div *ngIf="lastLesson">
-		<mat-card-subtitle class="lesson-note-date" *ngIf="lastLesson.date">
-			<span>{{lastLesson.date | arrayToDate | date}}</span>
-		</mat-card-subtitle>
+	<div *ngIf="isStaticLessonVisible && lastLesson" >
+		<div class="lesson-heading" fxLayout="row" fxFill >
+			<div  class="lesson-note-date" *ngIf="lastLesson.date" fxFlex>
+				<span>{{lastLesson.date | arrayToDate | date}}</span>
+			</div>
+			<button mat-icon-button *ngIf="editingLesson" fxFlex="8" matToolTip="Hide last lesson" (click)="collapseButtonClicked();"
+			    aria-label="Hide this lesson">
+				<mat-icon fontSet="fa" fontIcon="fa-minus"  aria-hidden="true"></mat-icon>
+			</button>
+		</div>
+		<div 
+			[innerHTML]="lastLesson.content">
+		</div>
 	</div>
-	<div *ngIf="lastLesson"
-		[innerHTML]="lastLesson.content"></div>
+	<div *ngIf="!isStaticLessonVisible && lastLesson" >
+		<div class="lesson-heading" fxLayout="row" fxFill >
+			<div  class="lesson-note-date" fxFlex>
+			</div>
+			<button mat-icon-button *ngIf="editingLesson" fxFlex="8" matToolTip="Show last lesson" (click)="expandButtonClicked();"
+			    aria-label="Hide this lesson">
+				<mat-icon fontSet="fa" fontIcon="fa-plus"  aria-hidden="true"></mat-icon>
+			</button>
+		</div>
+	</div> 
 </div>
