--- a/simple/src/app/lesson/lesson.component.html
+++ b/simple/src/app/lesson/lesson.component.html
@@ -3,7 +3,7 @@
 
 <mat-card class="topic-card" *ngFor="let topic of topicList"> 
 	<mat-card-content>
-		<app-lesson-editor [topic]="topic"></app-lesson-editor>
+		<app-lesson-editor [topic]="topic" [role]="role"></app-lesson-editor>
 	</mat-card-content>
 </mat-card>
 
