--- a/simple/src/styles.css
+++ b/simple/src/styles.css
@@ -2,6 +2,7 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 @import url('https://fonts.googleapis.com/icon?family=Roboto');
+@import url('https://fonts.googleapis.com/icon?family=Libre+Baskerville');
 @import url('https://fonts.googleapis.com/icon?family=Satisfy');
 @import "../node_modules/froala-editor/css/froala_editor.pkgd.min.css";
 @import  "../node_modules/froala-editor/css/froala_style.min.css";
@@ -10,5 +11,5 @@
 @import "./lectioeditor-theme.css";
 
 body {
-	background: lightsteelblue;
+	background: white;
 }
