On Topic History page, header now shows topic name when page is refreshed.

--- a/simple/src/app/topic-history/topic-history.component.html
+++ b/simple/src/app/topic-history/topic-history.component.html
@@ -1,5 +1,5 @@
 <div class="topic-history" fxLayout="column" fxLayoutAlign=" stretch">
-	<mat-toolbar color="primary">
+	<mat-toolbar color="primary" *ngIf="topic">
 		<mat-icon class="material-icons" (click)="clickBack();">arrow_back</mat-icon>
 		
 		<div class="topicname" fxFlex >{{topic.name}}</div>
