Change out to material design icons.

--- a/simple/src/app/lesson-editor/lesson-editor.component.css
+++ b/simple/src/app/lesson-editor/lesson-editor.component.css
@@ -2,10 +2,12 @@
 	
 }
 
-mat-icon {
-	font-size: regular;
-	style: regular;
+mat-icon.lesson-action{
+	font-size: xx-large;
+	color: gray;
 }
+
+
 
 .lesson-editor {
 	margin-bottom: 5px;
