When enter key is pressed in dialog field, it is the equivalent of OK button.

--- a/simple/src/app/new-topic-dialog/new-topic-dialog.component.html
+++ b/simple/src/app/new-topic-dialog/new-topic-dialog.component.html
@@ -2,8 +2,8 @@
 <label *ngIf="data.preError">{{data.preError}}</label>
 <mat-dialog-content [formGroup]="form">
 	<mat-form-field>
-		<input matInput placeholder="New Topic Name"
-			formControlName="topicName" />
+		<input matInput #newTopicNameInput placeholder="New Topic Name"
+			formControlName="topicName" (keyup.enter)="onEnter(newTopicNameInput.value)"/>
 	</mat-form-field>
 </mat-dialog-content>
 
