--- a/simple/src/app/app.component.html
+++ b/simple/src/app/app.component.html
@@ -1,5 +1,5 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div >
+<div class="app">
+<div class="prodname lectio-theme">Lectio</div>
 
   <router-outlet></router-outlet>
 </div>
