--- a/simple/src/app/notebook-lessons/notebook-lessons.component.html
+++ b/simple/src/app/notebook-lessons/notebook-lessons.component.html
@@ -1,10 +1,11 @@
-<div class="prodname">Lectio</div>
-<div class="notebook-header" fxLayout="row">
-	<div class="notebook-title" *ngIf="notebook" fxFlex>{{notebook.name}}</div>
-	<button mat-icon-button *ngIf="role == 'teacher'" fxFlex="8" matToolTip="New Topic" (click)="newTopicClicked(undefined)">
-		<mat-icon class="material-icons" >add_box</mat-icon>
-	</button>
-
+<div class="notebook-topbar notebook-theme lectio-theme">
+	<div class="notebook-header notebook-theme lectio-theme" fxLayout="row">
+		<div class="notebook-title notebook-theme" *ngIf="notebook" fxFlex>{{notebook.name}}</div>
+		<button mat-icon-button *ngIf="role == 'teacher'" fxFlex="8" matToolTip="New Topic" (click)="newTopicClicked(undefined)">
+			<mat-icon class="material-icons" >add_box</mat-icon>
+		</button>
+	
+	</div>
 </div>
 
 <div class="topic-card" *ngFor="let topic of topicList"> 
