--- a/simple/src/app/styles/lectioeditor-theme.css
+++ b/simple/src/app/styles/lectioeditor-theme.css
@@ -672,7 +672,7 @@
 }
 .lectioeditor-theme.fr-toolbar .fr-command.fr-btn,
 .lectioeditor-theme.fr-popup .fr-command.fr-btn {
-  color: red;
+  color: #777777;
   -moz-outline: 0;
   outline: 0;
   border: 0;
@@ -681,7 +681,7 @@
   -moz-transition: background 0.2s ease 0s;
   -ms-transition: background 0.2s ease 0s;
   -o-transition: background 0.2s ease 0s;
-  padding: 70;
+  padding: 0;
   width: 38px;
   height: 38px;
 }
@@ -1075,7 +1075,7 @@
   border-top: 5px solid #222222;
 }
 .lectioeditor-theme.fr-toolbar {
-  color: red;
+  color: #222222;
   background: #ffffff;
   font-family: Arial, Helvetica, sans-serif;
   padding: 0 2px;
