--- a/simple/src/app/app.component.css
+++ b/simple/src/app/app.component.css
@@ -11,7 +11,7 @@ div.app {
 	background-color: DarkSlateGray;
 	background-size:  cover;
 	width: 100%;
-	height: 100%;
+	min-height: 100vh;
 	margin: 0px;
 	padding: 0px;
 }
