--- a/simple/src/app/topic-lesson/topic-lesson.component.css
+++ b/simple/src/app/topic-lesson/topic-lesson.component.css
@@ -8,6 +8,7 @@ mat-icon.lesson-action{
 }
 mat-card {
 	margin-left: 1rem;
+	margin-right: 1rem;
 	margin-bottom: 0.5rem;
 	max-width: 800px;
 	background-color: #ffffffee; 
