--- a/simple/src/app/login/login.component.html
+++ b/simple/src/app/login/login.component.html
@@ -12,6 +12,9 @@
 			<span class="passwordlabel loginlabel lectio-theme">Password</span>
 			<input matInput class="passwordfield loginfield lectio-theme" type="password"/>
 		</mat-form-field>
+		<button mat-button class="loginbutton lectio-theme">
+			Log In
+		</button>
 	</div>
 
 </div>
