Let background of notebook cover entire page.  Move product and user bar from top of topic history page.

--- a/simple/src/app/notebook/notebook.component.html
+++ b/simple/src/app/notebook/notebook.component.html
@@ -1,5 +1,6 @@
 
 <div class="notebook-view notebook-theme lectio-theme">
+	<app-top-user-bar> </app-top-user-bar>
 	<router-outlet></router-outlet>
 	
 </div>
