--- a/simple/src/app/notebook/notebook.component.css
+++ b/simple/src/app/notebook/notebook.component.css
@@ -8,6 +8,7 @@ div.prodname {
 .notebook-view {
 	background-color: var(--notebook-bg-color);
 	background-size: cover;
-	height: 100vh;
+	min-height: 100vh;
+	height: 100%;
 	
 }
